--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "blurhash": "^2.0.5",
+    "contentful": "^10.12.2",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-scroll": "^1.9.0",
     "react-scroll-trigger": "^0.6.14",
-    "react-slick": "^0.30.2",
-    "sass": "^1.75.0",
-    "slick-carousel": "^1.8.1"
+    "sass": "^1.75.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
